<resources>
    <string name="app_name">Film Tracker</string>
    <string name="film_rolls">Film rolls</string>
    <string name="add_film_roll">Add film roll</string>
    <string name="film_brand">Film brand</string>
    <string name="film_type">Film type</string>
    <string name="iso">ISO</string>
    <string name="black_white">Black + white</string>
    <string name="colour">Colour</string>
    <string name="clear_all_data">Clear all data</string>
    <string name="roll_item_title">%1$s %2$s</string>
    <string name="roll_item_details">%1$s, ISO %2$s, %3$s exp</string>
    <string name="exposures">Exposures</string>
    <string name="add_new_shot">Add new shot</string>
    <string name="roll">Roll</string>
    <string name="shutter_speed">Shutter speed</string>
    <string name="aperture_value">Aperture value</string>
</resources>
